<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <TextView
        android:id="@+id/tv_searchRange"
        android:layout_width="290dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/tv_searchRange"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bt_search"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/bt_search"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/tv_searchRange"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bt_range300"
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#4CAF50"
        android:text="@string/bt_range300"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_searchRange" />

    <Button
        android:id="@+id/bt_range500"
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#4CAF50"
        android:text="@string/bt_range500"
        app:layout_constraintStart_toEndOf="@+id/bt_range300"
        app:layout_constraintTop_toBottomOf="@+id/tv_searchRange" />

    <Button
        android:id="@+id/bt_range1000"
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#4CAF50"
        android:text="@string/bt_range1000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_range300" />

    <Button
        android:id="@+id/bt_range2000"
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#4CAF50"
        android:text="@string/bt_range2000"
        app:layout_constraintStart_toEndOf="@+id/bt_range1000"
        app:layout_constraintTop_toBottomOf="@+id/bt_range300" />

    <Button
        android:id="@+id/bt_range3000"
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#4CAF50"
        android:text="@string/bt_range3000"
        app:layout_constraintStart_toEndOf="@+id/bt_range2000"
        app:layout_constraintTop_toBottomOf="@+id/bt_range300" />

    <ListView
        android:id="@+id/lv_shopList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

</androidx.constraintlayout.widget.ConstraintLayout>